--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 <div class="project-info">
     <span class="size">8 x 10 in </span><br>
-    <span class="caption">A 20-page book about home, using the content of a box mailed to me from back home in India. Designed in the form of an inventory, each item appears as through being scanned through a baggage scanner, accompanied by personalized texts and information.<br>
+    <span class="caption">A 20-page book about home, using the content of a box mailed to me from back home in India. Designed in the form of <b>an inventory</b>, each item appears as through being scanned through a baggage scanner, accompanied by personalized texts and information.<br>
     <!-- <i>SOFTWARES USED: INDESIGN </i> -->
     </span>
 </div>
@@ -56,7 +56,7 @@
     <div class="project-info">
         <span class="size">Make your own Blend! ↗</span><br>
         <span class="caption">
-        An automated packaging system for visualizing both definite and sensory data for Chamberlain Coffee blends. Data corresponding to the predefined fields is inputted into a Google Sheets document, which determines the visuals of the newest flavor’s packaging. This data-driven design is instantly generated and added to a live website of the blends collection.
+        An automated packaging system for visualizing both definite and sensory data for Chamberlain Coffee blends. Data corresponding to the predefined fields is inputted into a Google Sheets document, which determines the visuals of the newest flavor’s packaging. This <b>data-driven design</b> is instantly generated and added to a live website of the blends collection.
         </span>
     </div>
 </div>
@@ -72,8 +72,8 @@
     <div class="project-info">
         <span class="size"><a href="https://kandd871.github.io/stardew/" target="_blank">Try it Out! ↗</a></span><br>
         <span class="caption">
-            Stardew is a pixel-based, grid-based, variable display serif made using Glyphs. The typeface comes with different weights & widths and uses a flower-like pixel to form its characters.
-            Born from a curiosity about combining traditional design with technology, Stardew creates a playful interaction between pixel & serif typography. (ongoing!)
+            Stardew is a <b>pixel-based, grid-based, variable display serif</b> made using Glyphs. The typeface comes with <b>different weights & widths</b> and uses a flower-like pixel to form its characters.
+            Born from a curiosity about combining traditional design with technology, Stardew creates a <b>playful interaction between pixel & serif typography</b>. (ongoing!)
  
         </span>
     </div>
@@ -81,7 +81,7 @@
 
 <div class="project blumenhaus">
     <div class="title">
-        <span class="subtitle">BLUMENHAUS LOGO REDESIGN <i>2024</i></span>
+        <span class="subtitle">BLUMENHAUS PERIODICAL LOGO DESIGN <i>2024</i></span>
         <span class="skills">[creative coding, typography, illustration, branding]</span>
     </div>
     <div class="carousel" id="four">
@@ -92,7 +92,7 @@
         <span class="caption">
             <a href="https://www.blumenhaus-magazine.com/" target="_blank">Blumenhaus Magazine</a> is an annual botanical magazine from France. It focuses just as much on the aesthetic side as it does on its written content – described as "a luxurious hybrid of an art book & a magazine." I redesigned/enhanced the logo to evolve with time, reflecting everchanging nature. Using code and data connected to 
             two APIs – <a href="https://rapidapi.com/aligulajeff/api/garden-api" target="_blank">Garden API</a> & <a href="https://rapidapi.com/worldapi/api/open-weather13/" target="_blank">Weather API</a> –
-            different illustrated flowers bloom every day according to the current season, humidity, and wind speed.         
+            different illustrated flowers bloom <b>every day</b> according to the <b>current season, humidity, and wind speed. </b>        
         </span>
     </div>
 </div>
@@ -111,8 +111,8 @@
         <span class="size"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add your Weave! ↗</a></span><br>
         <span class="caption">
             <a href="https://www.metmuseum.org/exhibitions/weaving-abstraction-in-ancient-and-modern-art" target="_blank"><i>Weaving Abstraction in Ancient and Modern Art</i></a> is an exhibition at the Met
-            displaying textiles spanning not only centuries, but continents. The unique textiles are brought together through the use of similar colors, materials, grids, and techniques.
-            By identifying the fundamental form of patterns & shapes in weaving and translating them into ASCII symbols, a custom type has been designed through code. Visitors of the exhibition or website would
+            displaying textiles spanning not only centuries, but continents. The unique textiles are brought together through the use of <b> similar colors, materials, grids, and techniques.</b>
+            By identifying the fundamental form of patterns & shapes in weaving and translating them into ASCII symbols, <b>a custom type has been designed through code</b>. Visitors of the exhibition or website would
             be prompted to add their own data-driven symbol to the communal weave, leaving their mark on the typography.
 
  
@@ -130,7 +130,7 @@
     <div class="project-info">
         <span class="size"><a href="https://kandd871.github.io/escapism-github.io/index.html" target="_blank">Visit the Website ↗</a></span><br>
         <span class="caption">
-            This laptop-sized book is meant to explore escapism in a digital setting and simulate the act of being immersed on the web through "tabs", emojis, and other techniques. Inspired by Reddit, I created an internet-driven experience which allows you to escape your reality by browsing other people’s realities.
+            This laptop-sized book is meant to explore escapism in a digital setting and simulate the act of being immersed on the web through "tabs", emojis, and other techniques. Inspired by Reddit, I created an internet-driven experience which allows you to escape your reality by <b>browsing other people’s realities.</b>
             The website documented throughout the book is fully functional & coded by me.
     </div>
 </div>
@@ -149,7 +149,7 @@
     <div class="project-info">
         <span class="size"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank">Touch Some Grass! ↗</a></span><br>
         <span class="caption">
-            This interactive digital book is meant to explore escapism in a physical setting and is a strong constrast to the busy MacBook. It is meant to simulate the tangible feeling of sitting outside in NYC and flipping through a real book. This website allows the user to enjoy a rejuvenating, nature-driven experience to escape the overconsumption of technology. 
+            This interactive digital book is meant to explore escapism in a physical setting and is a strong constrast to the busy MacBook. It is meant to simulate the <b>tangible feeling</b> of sitting outside in NYC and flipping through a real book. This website allows the user to enjoy a <b>rejuvenating, nature-driven experience</b> to escape the overconsumption of technology.  
             The contents of book itself encourage the reader/user to get off the web.
     </div>
 </div>
@@ -162,9 +162,9 @@
         <div class="column1">
         I am a multidisciplinary graphic designer, creative coder, and artist from Bangalore and based in New York City. I’m currently a rising senior in the BFA Communication Design program at Parsons School of Design. 
         <br><br>
-        <a href=#top>My work</a> largely revolves around exploring how interaction influences the digital narrative. I’m interested in breaking conventions and creating non-traditional work using trial and error and experimentation through code, typography, bold colors, texture, perspective, and more. I design to push the limits of how tangible experiences can manifest in a digital setting, and vice versa. 
+        <a href=#top>My work</a> largely revolves around exploring how interaction influences the digital narrative. I’m interested in breaking conventions and creating non-traditional work using trial and error and experimentation through <b>code, typography, bold colors, texture, perspective, and more.</b>  I design to push the limits of how tangible experiences can manifest in a digital setting, and vice versa. 
         <br><br>
-        My strengths include front-end coding, UI design, typography, print design, 3D design & more.
+        <b>My strengths include front-end coding, UI design, typography, print design, 3D design & more.</b>
         <br><br>
         </div>
         So... if you’re interested, here’s my <a href="resume.pdf" target="_blank">RESUME</a>.
