--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 <div id="graph">
 
 </div></div>
+<div class="key">
 <div id="key">1 POINT &nbsp;= &nbsp;1 PROJECT</div>
+<div id="key2">[CLICK ON A POINT TO EXPLORE]</div>
+</div>
 </div>
 <div id="projects-section">
     <div id="about2">
