--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
     <div class="subbox">
     <div class="title"><span class="titlepoint"></span>&nbsp;EXPLORING ESCAPISM PT. 1 – The MacBOOK&nbsp; <i>2023</i></div>
 <div class="content">
-    <div class="subtitle">(print design) (risograph) (typography) (bookbinding)</div>
+    <div class="subtitle">(print design) (web design) (creative coding) (bookbinding)</div>
     <img class= "first" src="imgs/escapism1/escapism.gif">
     <button class="expand">[DETAILS]</button>
     <div class = "info">
