--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 </div>
 <div id="home-content">
 <div class="yaxis">
-<div id="branding">BRANDING</div>
-<div id="personal">PERSONAL</div>
+<div id="branding"><span class="label">BRANDING</span></div>
+<div id="personal"><span class="label">PERSONAL</span></div>
 </div>
 <div class="xaxis">
-<div id="print">PRINT</div>
-<div id="digital">DIGITAL</div>
+<div id="print"><span class="label">PRINT</span></div>
+<div id="digital"><span class="label">DIGITAL</span></div>
 </div>
 <div class="arrows">
 <div id="arrow1">
@@ -118,6 +118,17 @@
 <div id="projects">
     <div class="header" id="headertwo">
         <div id="name"><span class="click" id="click2">Drithi Kandoor</span></div>
+        <div id="projnav">
+            <a href="#blumenhaus"><div class="projpoint" data-target="blumenhaus"></div></a>
+            <a href="#chamberlain"><div class="projpoint" data-target="chamberlain"></div></a>
+            <a href="#stardew"><div class="projpoint" data-target="stardew"></div></a>
+            <a href="#home-book"><div class="projpoint" data-target="home-book"></div></a>
+            <a href="#weaving"><div class="projpoint" data-target="weaving"></div></a>
+            <a href="#first-things-first"><div class="projpoint" data-target="first-things-first"></div></a>
+            <a href="#mutated-odyssey"><div class="projpoint" data-target="mutated-odyssey"></div></a>
+            <a href="#macbook"><div class="projpoint" data-target="macbook"></div></a>
+            <a href="#touch-some-grass"><div class="projpoint" data-target="touch-some-grass"></div></a>
+         </div>
         <div id="allnav"><a href=#home>[Index]</a></div>
     </div>
     <div id="allprojects">
@@ -128,7 +139,7 @@
     <div class="content">
         <div class="subtitle">(creative coding) (typography) (illustration) (branding)</div>
         <img id="blumenhaus-web" class="first" src="imgs/blumenhaus/webcropped.gif">
-        <button class="expand">[DETAILS]</button>
+        <button class="expand">[SHOW DETAILS]</button>
         <div class = "info">
         <div class="caption"><a href="https://kandd871.github.io/logo-redesign/" target="_blank">See it Blooming Live! ↗</a></div>
         <div class="subcaption">Blumenhaus Magazine is an annual botanical magazine from France. It focuses just as much on the aesthetic side as it does on its written content – described as "a luxurious hybrid of an art book & a magazine." 
@@ -158,7 +169,7 @@
         <img class="fullwidth" id="blum-laptop" src="imgs/blumenhaus/laptop.gif">
         <img class="fullwidth" id="blum-icons" src="imgs/blumenhaus/8.png">
         <img class="fullwidth" id="blum-code" src="imgs/blumenhaus/10.png">
-        <button class="close">[CLOSE]</button>
+        <button class="close">[HIDE DETAILS]</button>
     </div>
     </div>
     </div>
@@ -170,7 +181,7 @@
         <div class="content">
         <div class="subtitle">(creative coding) (branding) (illustration) (web design)</div>
         <img class= "first" src="imgs/chamberlain/1.png">
-        <button class="expand">[DETAILS]</button>
+        <button class="expand">[SHOW DETAILS]</button>
         <div class = "info">
         <div class="caption"><a href="">Make your own Blend! ↗</a></div>
         <div class="subcaption">An <b>automated packaging system</b> for visualizing both definite and sensory data for Chamberlain Coffee blends. 
@@ -216,7 +227,7 @@
             <img src="imgs/chamberlain/12.png">
             <img src="imgs/chamberlain/9.png">
         </div>
-        <button class="close">[CLOSE]</button>
+        <button class="close">[HIDE DETAILS]</button>
 
     </div>
     </div>
@@ -231,7 +242,7 @@
 <div class="content">
     <div class="subtitle">(type design) (creative coding) (web design)</div>
     <img class= "first" src="imgs/stardew/webcrop.gif">
-    <button class="expand">[DETAILS]</button>
+    <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/stardew/" target="_blank">Try it out! ↗</a></div>
     <div class="subcaption">Stardew is a <b>bitmap variable display serif</b> made using Glyphs. 
@@ -267,7 +278,7 @@
     </div>
 
     <img class="fullwidth" class="last" src="imgs/stardew/16.png">
-    <button class="close">[CLOSE]</button>
+    <button class="close">[HIDE DETAILS]</button>
 </div>
 </div>
 </div>
@@ -281,7 +292,7 @@
 <div class="content">
     <div class="subtitle">(print design) (typography) (bookbinding)</div>
     <img class= "first" id="homeweb" src="imgs/homebook/web.gif">
-    <button class="expand">[DETAILS]</button>
+    <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption">8 x 10 in</div>
     <div class="subcaption">A 20-page book about home, using the content of a box mailed to me from back home in India. 
@@ -292,7 +303,7 @@
     <img class="fullwidth" src="imgs/homebook/contents.png">
     <img class="fullwidth" src="imgs/homebook/rejected.png">
     <img class="fullwidth" class="last" src="imgs/homebook/telugu.png">
-    <button class="close">[CLOSE]</button>
+    <button class="close">[HIDE DETAILS]</button>
 
     </div>
 </div>
@@ -306,7 +317,7 @@
 <div class="content">
     <div class="subtitle">(creative coding) (type design) (branding) (web design) (exhibition design)</div>
     <img class= "first" src="imgs/weaving/metcover.gif">
-    <button class="expand">[DETAILS]</button>
+    <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add your Weave! ↗</a></div>
     <div class="subcaption"><i>Weaving Abstraction in Ancient and Modern Art</i> is an exhibition at the Met displaying textiles spanning not only centuries, but continents. 
@@ -341,7 +352,7 @@
         <img src="imgs/weaving/9.png">
         <img src="imgs/weaving/phone.png">
     </div>
-    <button class="close">[CLOSE]</button>
+    <button class="close">[HIDE DETAILS]</button>
     </div>
 </div>
 </div>
@@ -355,7 +366,7 @@
 <div class="content">
     <div class="subtitle">(print design) (risograph) (typography) (bookbinding)</div>
     <img class= "first" src="imgs/manifesto/firstthings.gif">
-    <button class="expand">[DETAILS]</button>
+    <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption">5 x 7 In</div>
     <div class="subcaption">An 8-page booklet for the AIGA exhibition titled <i>First Things First, Second, and Third: a manifesto renewal</i>, 
@@ -369,7 +380,7 @@
     <img class= "fullwidth" src="imgs/manifesto/3.png">
     <img class= "fullwidth" src="imgs/manifesto/4.png">
     <img class= "fullwidth last" src="imgs/manifesto/5.png">
-    <button class="close">[CLOSE]</button>
+    <button class="close">[HIDE DETAILS]</button>
     </div>
 </div>
 </div>
@@ -383,7 +394,7 @@
 <div class="content">
     <div class="subtitle">(print design) (typography) (branding) (bookbinding)</div>
     <img class= "first" src="imgs/mutated/web.gif">
-    <button class="expand">[DETAILS]</button>
+    <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption">4.5 x 10.5 in</div>
     <div class="subcaption">
@@ -421,7 +432,7 @@
         <img src="imgs/mutated/shirt.png">
         <img src="imgs/mutated/tote.png">
     </div>
-    <button class="close">[CLOSE]</button>
+    <button class="close">[HIDE DETAILS]</button>
     </div>
 </div>
 </div>
@@ -435,7 +446,7 @@
 <div class="content">
     <div class="subtitle">(print design) (web design) (creative coding) (bookbinding)</div>
     <img class= "first" src="imgs/escapism1/escapism.gif">
-    <button class="expand">[DETAILS]</button>
+    <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank">Visit the Website ↗</a></div>
     <div class="subcaption">
@@ -463,7 +474,7 @@
     </div>
 
     <img class= "fullwidth last" src="imgs/escapism1/10.png">
-    <button class="close">[CLOSE]</button>
+    <button class="close">[HIDE DETAILS]</button>
     </div>
 </div>
 </div>
@@ -476,7 +487,7 @@
 <div class="content">
     <div class="subtitle">(creative coding) (web design) (print design) (typography)</div>
     <img class= "first" src="imgs/escapism2/1.gif">
-    <button class="expand">[DETAILS]</button>
+    <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank">Touch Some Grass! ↗</a></div>
     <div class="subcaption">
@@ -492,7 +503,7 @@
     <video controls>
         <source src="imgs/escapism2/video.mp4" type="video/mp4">
     </video>
-    <button class="close">[CLOSE]</button>
+    <button class="close">[HIDE DETAILS]</button>
     </div>
 </div>
 </div>
