--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div id="home">
 <div class="header" id="headerone">
     <div id="welcome">Welcome to&nbsp;<span class="click" id="click1">Drithi Kandoor</span>'s Index.</div>
-    <div id="nav">View All [9]</div>
+    <div id="nav">View All [<span id="count">0</span>]</div>
 </div>
 <div id="home-content">
 <div class="yaxis">
