--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <img class= "first" id="homeweb" src="imgs/homebook/web.gif">
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
-    <div class="caption">8 x 10 in</div>
+    <div class="caption">8 x 10 inches</div>
     <div class="subcaption">A 20-page book about home, using the content of a box mailed to me from back home in India. 
         Designed in the form of an <b>inventory</b>, each item appears as though being placed through a baggage scanner, accompanied by personalized texts & information.
     </div>
@@ -368,7 +368,7 @@
     <img class= "first" src="imgs/manifesto/firstthings.gif">
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
-    <div class="caption">5 x 7 In</div>
+    <div class="caption">5 x 7 inches</div>
     <div class="subcaption">An 8-page booklet for the AIGA exhibition titled <i>First Things First, Second, and Third: a manifesto renewal</i>, 
         serving as an informational program for persons attending the exhibit.<br><br>
         The manifesto talks about how design is losing intentionality due to consumerism/advertising culture. 
@@ -396,7 +396,7 @@
     <img class= "first" src="imgs/mutated/web.gif">
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
-    <div class="caption">4.5 x 10.5 in</div>
+    <div class="caption">4.5 x 10.5 inches</div>
     <div class="subcaption">
     Catalog design & graphics for an imaginary exhibition for the artist Rajni Perera at Karma Gallery, NYC. The catalog can be <b>flipped and read either way</b> – 
     one side tells you about the artist & the other tells you about the exhibition. The duality of the orientation and colors represents the duality and experimentation
