--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <p id="main-text">
     Currently a rising senior in the BFA Communication Design program at Parsons School of Design,  her work largely revolves around exploring how interaction influences the digital narrative. 
-    She is interested in breaking boundaries & creating non-traditional work using trial and error and experimentation through code, typography, bold colors, texture, perspective, & more.
+    She is interested in breaking boundaries & creating non-traditional work using trial & error with experimentation through code, typography, bold colors, texture, perspective, & more.
     </p> 
     <br><br><br><br>
     <div id="linkcontainer">
@@ -89,7 +89,7 @@
         <br>
         <p id="main-text">
         Currently a rising senior in the BFA Communication Design program at Parsons School of Design,  her work largely revolves around exploring how interaction influences the digital narrative. 
-        She is interested in breaking boundaries & creating non-traditional work using trial and error and experimentation through code, typography, bold colors, texture, perspective, & more.
+        She is interested in breaking boundaries & creating non-traditional work using trial & error with experimentation through code, typography, bold colors, texture, perspective, & more.
         </p> 
         <br><br><br><br>
         <div id="linkcontainer">
