--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         <div class="twocol4">
             <div class="carousel">
-                <img src="imgs/chamberlain/pouch1.png">
+                <img src="imgs/chamberlain/pouch1.png" class="active">
                 <img src="imgs/chamberlain/pouch2.png">
                 <img src="imgs/chamberlain/pouch3.png">
                 <img src="imgs/chamberlain/pouch4.png">
