--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <a href="https://www.linkedin.com/in/drithi-kandoor-512229253/" target="_blank">(Linkedin)</a>
     </div>
     <div class="linkcontainer">
-    <a href="resume.pdf" target="_blank"><div class="linkpoints"></div></a>
+    <a href="DrithiKandoor–Resume.pdf" target="_blank"><div class="linkpoints"></div></a>
     <br>
-    <a href="resume.pdf" target="_blank">(Resume)</a>
+    <a href="DrithiKandoor–Resume.pdf" target="_blank">(Resume)</a>
     </div>
     </div>
 </div>
@@ -124,9 +124,9 @@
         <a href="https://www.linkedin.com/in/drithi-kandoor-512229253/" target="_blank">(Linkedin)</a>
         </div>
         <div class="linkcontainer">
-        <a href="resume.pdf" target="_blank"><div class="linkpoints"></div></a>
+        <a href="DrithiKandoor–Resume.pdf" target="_blank"><div class="linkpoints"></div></a>
         <br>
-        <a href="resume.pdf" target="_blank">(Resume)</a>
+        <a href="DrithiKandoor–Resume.pdf" target="_blank">(Resume)</a>
         </div>
         </div>
     </div>
