--- a/index.html
+++ b/index.html
@@ -374,41 +374,13 @@
 </div>
 
 
-<div class="box" id="first-things-first">
-    <div class="subbox">
-    <div class="title"><span class="titlepoint"></span>AIGA's First Things First, Second, & Third: 
-        a manifesto renewal&nbsp; <i>2024</i></div>
-<div class="content">
-    <div class="subtitle">(print design) (risograph) (typography) (bookbinding)</div>
-    <img class= "first" src="imgs/manifesto/firstthings.gif">
-    <button class="expand">[SHOW DETAILS]</button>
-    <div class = "info">
-    <div class="caption">5 x 7 inches</div>
-    <div class="subcaption">An 8-page booklet for the AIGA exhibition titled <i>First Things First, Second, and Third: a manifesto renewal</i>, 
-        serving as an informational program for persons attending the exhibit.<br><br>
-        The manifesto talks about how design is losing intentionality due to consumerism/advertising culture. 
-        Tthe booklet is printed using a risograph, invoking the feeling of something designed traditionally & with greater purpose than a corporate printer. 
-        To make the booklet feel <b>personal</b>, hand-drawn arrows are used to guide the eye and highlight parts (as if someone was making notes) while important texts & the signatures are placed in a <b>more organic way</b>. 
-    </div>
-    <img class= "fullwidth" src="imgs/manifesto/1.png">
-    <img class= "fullwidth" src="imgs/manifesto/2.png">
-    <img class= "fullwidth" src="imgs/manifesto/3.png">
-    <img class= "fullwidth" src="imgs/manifesto/4.png">
-    <img class= "fullwidth last" src="imgs/manifesto/5.png">
-    <button class="close">[HIDE DETAILS]</button>
-    </div>
-</div>
-</div>
-</div>
-
-
 
 <div class="box" id="mutated-odyssey">
     <div class="subbox">
     <div class="title"><span class="titlepoint"></span>MUTATED ODYSSEY&nbsp; <i>2024</i></div>
 <div class="content">
     <div class="subtitle">(print design) (typography) (branding) (bookbinding)</div>
-    <img class= "first" src="imgs/mutated/web.gif">
+    <img class= "first" src="imgs/mutated/banner.png">
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption">4.5 x 10.5 inches</div>
@@ -417,7 +389,7 @@
     one side tells you about the artist & the other tells you about the exhibition. The duality of the orientation and colors represents the duality and experimentation
     shown in her work and the typography reflects the theme of science fiction which she uses a source of inspiration. 
     </div>
-
+    <img class= "fullwidth" src="imgs/mutated/web.gif">
     <div class="twocol">
         <img src="imgs/mutated/1.png">
         <img src="imgs/mutated/2.png">
@@ -452,6 +424,36 @@
 </div>
 </div>
 </div>
+
+
+
+<div class="box" id="first-things-first">
+    <div class="subbox">
+    <div class="title"><span class="titlepoint"></span>AIGA's First Things First, Second, & Third: 
+        a manifesto renewal&nbsp; <i>2024</i></div>
+<div class="content">
+    <div class="subtitle">(print design) (risograph) (typography) (bookbinding)</div>
+    <img class= "first" src="imgs/manifesto/firstthings.gif">
+    <button class="expand">[SHOW DETAILS]</button>
+    <div class = "info">
+    <div class="caption">5 x 7 inches</div>
+    <div class="subcaption">An 8-page booklet for the AIGA exhibition titled <i>First Things First, Second, and Third: a manifesto renewal</i>, 
+        serving as an informational program for persons attending the exhibit.<br><br>
+        The manifesto talks about how design is losing intentionality due to consumerism/advertising culture. 
+        Tthe booklet is printed using a risograph, invoking the feeling of something designed traditionally & with greater purpose than a corporate printer. 
+        To make the booklet feel <b>personal</b>, hand-drawn arrows are used to guide the eye and highlight parts (as if someone was making notes) while important texts & the signatures are placed in a <b>more organic way</b>. 
+    </div>
+    <img class= "fullwidth" src="imgs/manifesto/1.png">
+    <img class= "fullwidth" src="imgs/manifesto/2.png">
+    <img class= "fullwidth" src="imgs/manifesto/3.png">
+    <img class= "fullwidth" src="imgs/manifesto/4.png">
+    <img class= "fullwidth last" src="imgs/manifesto/5.png">
+    <button class="close">[HIDE DETAILS]</button>
+    </div>
+</div>
+</div>
+</div>
+
 
 
 
