--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <img class= "first" src="imgs/chamberlain/1.png">
         <button class="expand">[SHOW DETAILS]</button>
         <div class = "info">
-        <div class="caption"><a href="https://kandd871.github.io/chamberlain-generator/">Make your own Blend! ↗</a></div>
+        <div class="caption"><a href="https://kandd871.github.io/chamberlain-generator/" target="_blank">Make your own Blend! ↗</a></div>
         <div class="subcaption">An <b>automated packaging system</b> for visualizing both definite and sensory data for Chamberlain Coffee blends. 
             Data corresponding to the predefined fields is inputted into a Google Sheets document, which determines the visuals of the newest flavor’s packaging. 
             This data-driven design is <b>instantly generated and added </b> to a live website of the blends collection.
