--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
     <div class="title"><span class="titlepoint"></span>EXPLORING ESCAPISM PT. 1 – The MacBOOK&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(print design) (web design) (creative coding) (bookbinding)</div>
-    <img class= "first" src="imgs/escapism1/escapism.gif">
+    <img class= "first" src="imgs/escapism1/escapism1.gif">
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank">Visit the Website ↗</a></div>
