--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     <div class="title"><span class="titlepoint"></span>THE MET COMMUNITY DRIVEN DESIGN&nbsp; <i>2024</i></div>
 <div class="content">
     <div class="subtitle">(creative coding) (type design) (branding) (web design) (exhibition design)</div>
-    <img class= "first" src="imgs/weaving/metcover.gif">
+    <img class= "first" src="imgs/weaving/sub.gif">
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add your Weave! ↗</a></div>
