--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/stardew/" target="_blank">Try it out! ↗</a></div>
-    <div class="subcaption">Stardew is a <b>bitmap variable display serif</b> made using Glyphs. 
-        The typeface comes with <b>different weights & widths</b> and uses a flower-like pixel to form its characters. 
-        Born from a curiosity about combining traditional design with technology, Stardew creates a playful interaction between pixel & serif typography. (ongoing!)
+    <div class="subcaption">Stardew is a <b>bitmap variable display serif</b> made using Glyphs. It was born from a curiosity about combining traditional design with technology, aiming to create an interplay between pixel and serif typography. 
+        Interested in how a grid and symbol could reimagine the nature of serifs and create a visual narrative, Stardew uses a flower-like pixel to form its characters. 
+        The typeface comes with <b>different weights & widths</b> that resemble flowers blooming. 
     </div>
 
     <img class="fullwidth" src="imgs/stardew/typeface.png">
