--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DRITHI KANDOOR</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jmw8ntb.css">
 </head>
 <body>
 <div id="about">
@@ -205,7 +206,7 @@
         </div>
   
         <div class="twocol2">
-            <img src="imgs/chamberlain/2.png">
+            <img src="imgs/chamberlain/22.png">
             <img src="imgs/chamberlain/3.png">
         </div>
         <div class="twocol3">
