--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="title"><span class="titlepoint"></span>BLUMENHAUS LOGO (RE)DESIGN&nbsp; <i>2024</i></div>
     <div class="content">
         <div class="subtitle">(creative coding) (typography) (illustration) (branding)</div>
-        <img class="first" src="imgs/blumenhaus/webcropped.gif">
+        <a href="https://kandd871.github.io/logo-redesign/" target="_blank"><img class="first" src="imgs/blumenhaus/webcropped.gif"></a>
         <button class="expand">[SHOW DETAILS]</button>
         <div class = "info">
         <div class="caption"><a href="https://kandd871.github.io/logo-redesign/" target="_blank">See it Blooming Live! ↗</a></div>
@@ -196,7 +196,7 @@
         <div class="title"><span class="titlepoint"></span>CHAMBERLAIN COFFEE DATA-DRIVEN PACKAGING&nbsp; <i>2024</i></div>
         <div class="content">
         <div class="subtitle">(creative coding) (branding) (illustration) (web design)</div>
-        <img class= "first" src="imgs/chamberlain/1.png">
+        <a href="https://kandd871.github.io/chamberlain-generator/" target="_blank"><img class= "first" src="imgs/chamberlain/1.png"></a>
         <button class="expand">[SHOW DETAILS]</button>
         <div class = "info">
         <div class="caption"><a href="https://kandd871.github.io/chamberlain-generator/" target="_blank">Make your own Blend! ↗</a></div>
@@ -257,7 +257,7 @@
     <div class="title"><span class="titlepoint"></span>STARDEW TYPEFACE&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(type design) (creative coding) (web design)</div>
-    <img class= "first" src="imgs/stardew/webcrop.gif">
+    <a href="https://kandd871.github.io/stardew/" target="_blank"><img class= "first" src="imgs/stardew/webcrop.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/stardew/" target="_blank">Try it out! ↗</a></div>
@@ -332,7 +332,7 @@
     <div class="title"><span class="titlepoint"></span>THE MET COMMUNITY DRIVEN DESIGN&nbsp; <i>2024</i></div>
 <div class="content">
     <div class="subtitle">(creative coding) (type design) (branding) (web design) (exhibition design)</div>
-    <img class= "first" src="imgs/weaving/sub.gif">
+    <a href="https://kandd871.github.io/exhibition/" target="_blank"><img class= "first" src="imgs/weaving/sub.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add your Weave! ↗</a></div>
@@ -463,7 +463,7 @@
     <div class="title"><span class="titlepoint"></span>EXPLORING ESCAPISM PT. 1 – The MacBOOK&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(print design) (web design) (creative coding) (bookbinding)</div>
-    <img class= "first" src="imgs/escapism1/escapism1.gif">
+    <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank"><img class= "first" src="imgs/escapism1/escapism1.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank">Visit the Website ↗</a></div>
@@ -504,7 +504,7 @@
     <div class="title"><span class="titlepoint"></span>EXPLORING ESCAPISM PT. 2 – Touch Some Grass!&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(creative coding) (web design) (print design) (typography)</div>
-    <img class= "first" src="imgs/escapism2/1.gif">
+    <div class="caption"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank"><img class= "first" src="imgs/escapism2/1.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank">Touch Some Grass! ↗</a></div>
