--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <div class="title"><span class="titlepoint"></span>EXPLORING ESCAPISM PT. 1 – The MacBOOK&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(print design) (web design) (creative coding) (bookbinding)</div>
-    <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank"><img class= "first" src="imgs/escapism1/escapism1.gif"></a>
+    <a href="https://kandd871.github.io/escapism-github.io/" target="_blank"><img class= "first" src="imgs/escapism1/escapism1.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank">Visit the Website ↗</a></div>
@@ -504,7 +504,7 @@
     <div class="title"><span class="titlepoint"></span>EXPLORING ESCAPISM PT. 2 – Touch Some Grass!&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(creative coding) (web design) (print design) (typography)</div>
-    <div class="caption"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank"><img class= "first" src="imgs/escapism2/1.gif"></a>
+    <a href="https://kandd871.github.io/touchsomegrass/" target="_blank"><img class= "first" src="imgs/escapism2/1.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank">Touch Some Grass! ↗</a></div>
