--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     Visitors of the exhibition or website would be prompted to add their <b>own data-driven symbol to the communal weave</b>, leaving their mark on the typography.
     </div>
 
-    <img class="fullwidth" src="imgs/weaving/web.gif">
+    <img class="fullwidth border" src="imgs/weaving/web.gif">
     <div class="twocol five">
         <img src="imgs/weaving/data.png">
         <img src="imgs/weaving/11.png">
@@ -504,7 +504,7 @@
     <div class="title"><span class="titlepoint"></span>EXPLORING ESCAPISM PT. 2 – Touch Some Grass!&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(creative coding) (web design) (print design) (typography)</div>
-    <a href="https://kandd871.github.io/touchsomegrass/" target="_blank"><img class= "first" src="imgs/escapism2/1.gif"></a>
+    <a href="https://kandd871.github.io/touchsomegrass/" target="_blank"><img class= "first border" src="imgs/escapism2/1.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank">Touch Some Grass! ↗</a></div>
@@ -515,7 +515,7 @@
         contents itself encourage the reader/user to get off the web.
     </div>
 
-    <img class= "fullwidth" src="imgs/escapism2/3.png">
+    <img class= "fullwidth border" src="imgs/escapism2/3.png">
     <img class= "fullwidth" src="imgs/escapism2/3.gif">
     <img class= "fullwidth" src="imgs/escapism2/gif.gif">
     <video controls>
