--- a/index.html
+++ b/index.html
@@ -504,7 +504,12 @@
     <div class="title"><span class="titlepoint"></span>EXPLORING ESCAPISM PT. 2 – Touch Some Grass!&nbsp; <i>2023</i></div>
 <div class="content">
     <div class="subtitle">(creative coding) (web design) (print design) (typography)</div>
-    <a href="https://kandd871.github.io/touchsomegrass/" target="_blank"><img class= "first border" src="imgs/escapism2/1.gif"></a>
+    <a href="https://kandd871.github.io/touchsomegrass/" target="_blank">
+        <div class="background">
+            <img class="first" src="imgs/escapism2/bg.png">
+            <img class="second border" src="imgs/escapism2/1.gif">
+        </div>        
+    </a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/touchsomegrass/" target="_blank">Touch Some Grass! ↗</a></div>
