--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <div class="caption"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add your Weave! ↗</a></div>
     <div class="subcaption"><i>Weaving Abstraction in Ancient and Modern Art</i> is an exhibition at the Met displaying textiles spanning not only centuries, but continents. 
     The unique textiles are brought together through the use of similar colors, materials, grids, and techniques. By identifying the fundamental form of patterns & shapes in weaving and translating them into ASCII symbols, a <b>custom type has been designed through code</b>.
-    Visitors of the exhibition or website would be prompted to add their <b>own data-driven symbol to the communal weave</b>, leaving their mark on the typography.
+    Visitors of the exhibition or website would be prompted to add their <b>own data-driven symbol to the communal weave</b>, leaving their mark on the typography. Uses firebase!
     </div>
 
     <img class="fullwidth border" src="imgs/weaving/web.gif">
