--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             <a href="#stardew"><div class="projpoint" data-target="stardew"></div></a>
             <a href="#home-book"><div class="projpoint" data-target="home-book"></div></a>
             <a href="#weaving"><div class="projpoint" data-target="weaving"></div></a>
-            <a href="#first-things-first"><div class="projpoint" data-target="first-things-first"></div></a>
             <a href="#mutated-odyssey"><div class="projpoint" data-target="mutated-odyssey"></div></a>
+            <a href="#first-things-first"><div class="projpoint" data-target="first-things-first"></div></a>
             <a href="#macbook"><div class="projpoint" data-target="macbook"></div></a>
             <a href="#touch-some-grass"><div class="projpoint" data-target="touch-some-grass"></div></a>
          </div>
@@ -332,7 +332,7 @@
     <div class="title"><span class="titlepoint"></span>THE MET COMMUNITY DRIVEN DESIGN&nbsp; <i>2024</i></div>
 <div class="content">
     <div class="subtitle">(creative coding) (type design) (branding) (web design) (exhibition design)</div>
-    <a href="https://kandd871.github.io/exhibition/" target="_blank"><img class= "first" src="imgs/weaving/sub.gif"></a>
+    <a href="https://kandd871.github.io/exhibition/" target="_blank"><img class= "first" src="imgs/weaving/sub2.gif"></a>
     <button class="expand">[SHOW DETAILS]</button>
     <div class = "info">
     <div class="caption"><a href="https://kandd871.github.io/exhibition/" target="_blank">Add your Weave! ↗</a></div>
