--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="subcaption">
         <img id="illustrations" class="fullwidth" src="imgs/blumenhaus/1.png">
         </div><br><br>
-        <div class="twocol">
+        <div class="twocolweb">
             <img id="blum-web1" src="imgs/blumenhaus/9.png">
             <img id="blum-web2" src="imgs/blumenhaus/99.png">
         </div>
