--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         <div class="subcaption">
         In → Spring 2024 <br><br>
         Blumenhaus Magazine is an annual botanical magazine from France. It focuses just as much on the aesthetic side as it does on its written content – described as "a luxurious hybrid of an art book & a magazine." 
-        I redesigned/enhanced the logo to <b>evolve with time</b>, reflecting everchanging nature.<br><br> 
-        Using code and data connected to two APIs – Garden API & Weather API – different illustrated flowers bloom every day according to the current <b>season, humidity, & wind speed</b>.
+        I redesigned/enhanced the logo to evolve with time, reflecting everchanging nature.<br><br> 
+        Using code and data connected to two APIs – Garden API & Weather API – different illustrated flowers bloom every day according to the current season, humidity, & wind speed.
         </div>
         <div class="logo"><img id="newlogo" src="imgs/blumenhaus/newlogo.png"></div><br><br>
         <div class="subcaption">
@@ -206,9 +206,9 @@
         <div class="caption"><a href="https://kandd871.github.io/chamberlain-generator/" target="_blank">Make your own Blend! ↗</a></div>
         <div class="subcaption">
             In → Spring 2024<br><br>
-            An <b>automated packaging system</b> for visualizing both definite and sensory data for Chamberlain Coffee blends. 
+            An automated packaging system for visualizing both definite and sensory data for Chamberlain Coffee blends. 
             Data corresponding to the predefined fields is inputted into a Google Sheets document, which determines the visuals of the newest flavor’s packaging. 
-            This data-driven design is <b>instantly generated and added </b> to a live website of the blends collection.
+            This data-driven design is instantly generated and added to a live website of the blends collection.
         </div>
   
         <div class="twocol2">
@@ -269,9 +269,9 @@
     <div class="caption"><a href="https://kandd871.github.io/stardew/" target="_blank">Try it out! ↗</a></div>
     <div class="subcaption">
         In → Fall 2023<br><br>
-        Stardew is a <b>bitmap variable display serif</b> made using Glyphs. It was born from a curiosity about combining traditional design with technology, aiming to create an interplay between pixel and serif typography. 
+        Stardew is a bitmap variable display serif made using Glyphs. It was born from a curiosity about combining traditional design with technology, aiming to create an interplay between pixel and serif typography. 
         Interested in how a grid and symbol could reimagine the nature of serifs and create a visual narrative, Stardew uses a flower-like pixel to form its characters. 
-        The typeface comes with <b>different weights & widths</b> that resemble flowers blooming. 
+        The typeface comes with different weights & widths that resemble flowers blooming. 
     </div>
 
     <img class="fullwidth" src="imgs/stardew/typeface.png">
@@ -322,7 +322,7 @@
     <div class="subcaption">
         In → Spring 2023<br><br>
         A 20-page book about home, using the content of a box mailed to me from back home in India. 
-        Designed in the form of an <b>inventory</b>, each item appears as though being placed through a baggage scanner, accompanied by personalized texts & information.
+        Designed in the form of an inventory, each item appears as though being placed through a baggage scanner, accompanied by personalized texts & information.
     </div>
 
     <img class="fullwidth" src="imgs/homebook/stack.png">
@@ -349,8 +349,8 @@
     <div class="subcaption">
         In → Spring 2024<br><br>
         <i>Weaving Abstraction in Ancient and Modern Art</i> is an exhibition at the Met displaying textiles spanning not only centuries, but continents. 
-    The unique textiles are brought together through the use of similar colors, materials, grids, and techniques. By identifying the fundamental form of patterns & shapes in weaving and translating them into ASCII symbols, a <b>custom type has been designed through code</b>.
-    Visitors of the exhibition or website would be prompted to add their <b>own data-driven symbol to the communal weave</b>, leaving their mark on the typography. Uses firebase!
+    The unique textiles are brought together through the use of similar colors, materials, grids, and techniques. By identifying the fundamental form of patterns & shapes in weaving and translating them into ASCII symbols, a custom type has been designed through code.
+    Visitors of the exhibition or website would be prompted to add their own data-driven symbol to the communal weave, leaving their mark on the typography. Uses firebase!
     </div>
 
     <img class="fullwidth border" src="imgs/weaving/web.gif">
@@ -399,7 +399,7 @@
     <div class="caption">4.5 x 10.5 inches</div>
     <div class="subcaption">
         In → Spring 2024<br><br>
-    Catalog design & graphics for an imaginary exhibition for the artist Rajni Perera at Karma Gallery, NYC. The catalog can be <b>flipped and read either way</b> – 
+    Catalog design & graphics for an imaginary exhibition for the artist Rajni Perera at Karma Gallery, NYC. The catalog can be flipped and read either way – 
     one side tells you about the artist & the other tells you about the exhibition. The duality of the orientation and colors represents the duality and experimentation
     shown in her work and the typography reflects the theme of science fiction which she uses a source of inspiration. 
     </div>
@@ -457,7 +457,7 @@
         serving as an informational program for persons attending the exhibit.<br><br>
         The manifesto talks about how design is losing intentionality due to consumerism/advertising culture. 
         Tthe booklet is printed using a risograph, invoking the feeling of something designed traditionally & with greater purpose than a corporate printer. 
-        To make the booklet feel <b>personal</b>, hand-drawn arrows are used to guide the eye and highlight parts (as if someone was making notes) while important texts & the signatures are placed in a <b>more organic way</b>. 
+        To make the booklet feel personal, hand-drawn arrows are used to guide the eye and highlight parts (as if someone was making notes) while important texts & the signatures are placed in a more organic way. 
     </div>
     <img class= "fullwidth" src="imgs/manifesto/1.png">
     <img class= "fullwidth" src="imgs/manifesto/2.png">
@@ -484,8 +484,8 @@
     <div class="caption"><a href="https://kandd871.github.io/escapism-github.io/" target="_blank">Visit the Website ↗</a></div>
     <div class="subcaption">
         In → Fall 2023<br><br>
-     This laptop-sized book is meant to explore escapism in a digital setting and simulate the act of being <b>immersed on the web</b> through "tabs", emojis, and other techniques. 
-     Inspired by Reddit, I created an <b>internet-driven experience</b> which allows you to escape your reality by browsing other people’s realities. 
+     This laptop-sized book is meant to explore escapism in a digital setting and simulate the act of being immersed on the web through "tabs", emojis, and other techniques. 
+     Inspired by Reddit, I created an internet-driven experience which allows you to escape your reality by browsing other people’s realities. 
      The website documented throughout the book is fully functional & coded by me.
     </div>
 
@@ -532,8 +532,8 @@
     <div class="subcaption">
         In → Fall 2023<br><br>
         This interactive digital book is meant to explore escapism in a physical setting and is a strong constrast to the busy MacBook. 
-        It is meant to simulate the <b>tangible feeling</b> of sitting outside in NYC and flipping through a real book. 
-        This website allows the user to enjoy a <b>rejuvenating, nature-driven experience</b> to escape the overconsumption of technology while the 
+        It is meant to simulate the tangible feeling of sitting outside in NYC and flipping through a real book. 
+        This website allows the user to enjoy a rejuvenating, nature-driven experience to escape the overconsumption of technology while the 
         contents itself encourage the reader/user to get off the web.
     </div>
 
